[CSS Parser] Filters and Reflections Fixes https://bugs.webkit.org/show_bug.cgi?id=165103

Reviewed by Zalan Bujtas.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeReflect):
Support the "none" keyword for box-reflect.

* css/parser/CSSPropertyParserHelpers.cpp:
(WebCore::CSSPropertyParserHelpers::isValidPrimitiveFilterFunction):
(WebCore::CSSPropertyParserHelpers::consumeFilterFunction):
Don't rely on range checking, since invert isn't grouped with the other
function values. Actually check every keyword.



Canonical link: https://commits.webkit.org/182712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209006 268f45cc-cd09-0410-ab3c-d52691b4dbfc